# maestro

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  HEIMDALL.md  LICENSE  MFLOW.md  MakeFile  Makefile  README  README.md  README.org  USER_STORIES.md  cleanup-make-test.sh  compare_maestro_ssms.py  config.mk  configure-make.sh  environment-compare.py  guided-setup.sh  hare-compile.sh  install-and-publish-ssm.sh  log-maestro-recompile.sh  makefile  package-ssm.sh  reinstall-ssm.sh  remove-repo-and-ssm.sh  retry-ssm.sh  shared-make-configuration.cfg  soft-link-ssm.sh  tcl-soft-links.sh  use-maestro.in.sh  utilities  verify-ssm-packages.sh  verify_maestro_ssms.sh
.ssm.d/: control  (+3 more)
man/: CMakeLists.txt  create_roffs_from_markdown.sh  footer.md  mrkd.py  requirements.txt
man/markdown/: chaindot.py.1.md  evaluate_vars.1.md  expbegin.1.md  expclean.1.md  getdef.1.md  logreader.1.md  madmin.1.md  maestro.1.md  mflow.1.md  mserver.1.md  mserver_check.1.md  nodeinfo.1.md  nodelister.1.md  nodelogger.1.md  scanexp.1.md  task_setup.dot.1.md  task_setup.ksh.1.md  task_setup.py.1.md  varsed.py.1.md  xflow.1.md  xflow_overview.1.md
src/: CMakeLists.txt  FlowVisitor.c  FlowVisitor.h  FlowVisitor_noTrace.c  Makefile  QueryServer.c  ResourceVisitor.c  ResourceVisitor.h  SeqDatesUtil.c  SeqDatesUtil.h  SeqListNode.c  SeqListNode.h  SeqLoopsUtil.c  SeqLoopsUtil.h  SeqNameValues.c  SeqNode.c  SeqNode.h  SeqNodeCensus.c  SeqNodeCensus.h  SeqUtil.c  SeqUtil.h  SeqUtilServer.c  TsvInfoDatabase.c  TsvInfo_main.c  XmlUtils.c  XmlUtils.h  expcatchup_main.c  expdata_main.c  getdef_main.c  l2d2_Util.c  l2d2_admin_main.c  l2d2_commun.c  l2d2_lists.c  l2d2_roxml-internal.c  l2d2_server.h  l2d2_server_main.c  l2d2_socket.c  l2d2_socket.h  maestro.c  maestro_function.c  (+20 more)
src/.ssm.d/: post-install
src/core/: CMakeLists.txt  FlowVisitor.c  FlowVisitor.h  QueryServer.c  QueryServer.h  ResourceVisitor.c  ResourceVisitor.h  SeqDatesUtil.c  SeqDatesUtil.h  SeqDepends.c  SeqDepends.h  SeqListNode.c  SeqListNode.h  SeqLoopsUtil.c  SeqLoopsUtil.h  SeqNameValues.c  SeqNameValues.h  SeqNode.c  SeqNode.h  SeqNodeCensus.c  SeqNodeCensus.h  SeqUtil.c  SeqUtil.h  SeqUtilServer.c  SeqUtilServer.h  XmlUtils.c  XmlUtils.h  expcatchup.c  expcatchup.h  expcatchup_main.c  getdef_main.c  getopt.h  getopt_long.c  l2d2_Util.c  l2d2_Util.h  l2d2_admin.c  l2d2_admin_main.c  l2d2_commun.c  l2d2_commun.h  l2d2_lists.c  (+48 more)
src/core/testDir/: flow.xml
src/core/wrappers/: IBM.trap_bottom  IBM.trap_top  LINUX.trap_bottom  LINUX.trap_top  cfg
src/mflow/: mock_files
src/mflow/config/: default
src/mflow/scripts/: get_node_paths_from_tsvinfo.py
src/mflow/setup/: install-dependencies.sh  requirements.txt
src/mflow/src/: 1.py  antoine.py  mflow.py  shuffle_statuses.py
src/mflow/src/config/: __init__.py  config_reader.py
src/mflow/src/constants/: README.md  __init__.py  json.py  maestro.py  path.py  resource.py  test.py  tui.py
src/mflow/src/maestro/: __init__.py  loop.py  node_log_parser.py  status.py  xml.py
src/mflow/src/maestro_experiment/: __init__.py  maestro_experiment.py  me_flow.py  me_indexes.py  me_logs.py  me_node_data.py  me_node_status.py  me_resources.py  me_snapshot.py  me_validation.py
src/mflow/src/mflow_utilities/: __init__.py  resources.py  simple_logging.py  threading.py
src/mflow/src/tests/: cache.py  test_maestro_loop.py  test_me.py  test_me_flow_data.py  test_me_logs.py  test_me_node_data.py  test_node_status.py  test_qstat.py  test_resources.py  test_text_flow.py  test_tui_manager.py  test_utilities.py  test_xml.py
src/mflow/src/tui/: __init__.py  docstring.py  popup_manager.py  text_flow.py  tui_manager.py  utilities.py
src/mflow/src/utilities/: __init__.py  colors.py  curses.py  generic.py  path.py  pretty.py  qstat.py  test.py  xml_cache.py
src/python3/: .gitignore  HEIMDALL.md  README.md
src/python3/csv/: .~lock.message_codes.csv#  file_content_checks.csv  message_codes.csv  zfill-codes.py
src/python3/doc/en/: heimdall.md  heimdall_codes.md
src/python3/doc/fr/: HEIMDALL_CODES.md  heimdall.md  heimdall_codes.md
src/python3/mock_files/: csv_dictionary.csv  node_paths_comp_exp  tsvinfo-g0  tsvinfo-g1  weird-config-semi-xml.cfg  weird-config-semi-xml2.cfg
src/python3/mock_files/complete_experiment/: flow.xml
src/python3/mock_files/heimdall/: c4  e3  e7
src/python3/mock_files/link-chain/: link1
src/python3/mock_files/suites_with_codes/: b002  w001  w031
src/python3/mock_files/suites_without_codes/: b006  e014  w011
src/python3/mock_files/turtle_experiment/: turtle_burp.py  turtle_crawl.py
src/python3/schemas/: flow_data.json  node_data.json
src/python3/scripts/: autopep-python-scripts.sh  follow-latest-mflow-log.sh  get_node_paths_from_tsvinfo.py
src/python3/setup/: install-dependencies.sh  requirements.txt
src/python3/src/: generate_messages_markdown.py  heimdall.py  heimdall_cli.py  maestro_search_cli.py  mflow.py  mflow_cli.py  mhistory.py  profile  run_tests.py  shuffle_statuses.py
src/python3/src/constants/: __init__.py  colors.py  curses.py  deprecated.py  heimdall.py  io.py  json.py  maestro.py  mflow.py  path.py  resource.py  test.py  tui.py  version.py
src/python3/src/heimdall/: __init__.py  basic_validation.py  docstring.py  experiment_scanner.py  file_cache.py  file_info.py  (+2 more)
src/python3/templates/: maestro_status_summary.html
src/tcl/: CMakeLists.txt  INSTALL.sh  README  makefile
src/tcl/.ssm.d/: control
src/tcl/tcllib-1.13/: DESCRIPTION.txt  tcllib.spec  tcllib.tap  tcllib.yml
src/tcl/tklib-0.5/: DESCRIPTION.txt  tklib.spec  tklib.tap
src/testDir/: loop_container.xml  tsv_keyed_list.tcl
src/utilities/data/: .maestrorc
src/xflow/etc/: check_deprecation
src/xflow/lib/: About.tcl  Catchup.tcl  ClockWrapper.tcl  DisplayGrp.tcl  DrawUtils.tcl  ExpOptions.tcl  ExpXmlOptions.tcl  ExpXmlReader.tcl  FileLogger.tcl  FlowXml.tcl  LogMonitor.tcl  LogReader.tcl  MsgCenter.tcl  Overview.tcl  OverviewExpStatus.tcl  Sequencer.tcl  SharedData.tcl  SharedFlowNode.tcl  ThreadPool.tcl  TsvInfo.tcl  dkffont.tcl  trash.tcl  utils.tcl  xflow.tcl
(+1624 files in other folders)
