
add_subdirectory(core)
add_subdirectory(tcl)
# The trailing slash is important
INSTALL(DIRECTORY xflow/ DESTINATION ${CMAKE_INSTALL_PREFIX} USE_SOURCE_PERMISSIONS)
INSTALL(DIRECTORY xm/ DESTINATION ${CMAKE_INSTALL_PREFIX} USE_SOURCE_PERMISSIONS)
INSTALL(DIRECTORY utilities/ DESTINATION ${CMAKE_INSTALL_PREFIX} USE_SOURCE_PERMISSIONS)
